<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/mobile1"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/some_id1"
        android:textAppearance="@style/some_id1"
        android:gravity="top"
        android:inputType="number"
        android:maxLength="10"
        android:fontFamily="@font/gilroysemibold"
        />

    <ImageView
        android:id="@+id/vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@+id/mobile1"
        android:src="@drawable/edit"
        />
    <TextView
        android:id="@+id/enter_the_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mobile1"
        android:layout_marginLeft="30dp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="8dp"
        android:text="@string/enter_the_o"
        android:textAppearance="@style/enter_the_o"
        android:gravity="top"
        />
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="31dp"
        android:layout_below="@+id/enter_the_o"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_1"
        />
    <EditText
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_the_o"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="7dp"
        android:text="@string/otp"
        android:inputType="number"
        android:textAppearance="@style/some_id"
        android:gravity="center_horizontal|top"
        />

    <View
        android:id="@+id/login"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_below="@+id/rectangle_1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rectangle3"
        />
    <TextView
        android:id="@+id/contin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rectangle_1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="30dp"
        android:text="@string/contin"
        android:textAppearance="@style/contin"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/time_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rectangle_1"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="30dp"
        android:text="@string/time_dur"
        android:textAppearance="@style/time_dur"
        android:gravity="center_horizontal|top"
        />


</RelativeLayout>
